--- a/shopping/css/common.css
+++ b/shopping/css/common.css
@@ -224,7 +224,7 @@
 
 /* footer底部模块制作  */
 .footer {
-  height: 415px;
+  /* height: 415px; */
   background-color: #f5f5f5;
   padding-top: 30px;
 }
